--- a/rpm/dkms.conf
+++ b/rpm/dkms.conf
@@ -4,3 +4,4 @@ PACKAGE_VERSION="1.0.0"
 BUILT_MODULE_NAME[0]="trustbase_linux"
 DEST_MODULE_LOCATION[0]="/kernel/extra/trustbase-linux"
 POST_BUILD="post_dkms_build.sh"
+AUTOINSTALL="yes"
